# Beacon-Backend

./: .gitignore  Beacon.csproj  Beacon.postman_collection.json  Beacon.sln  Cargo.toml  Form1.Designer.cs  Form1.cs  Program.cs  README.md  beacon.sql  beacon_insomnia.json  bootstrap.py  docker-compose.yml  games.json  get_games.php  httpd.conf  login.php  logout.php  register.php  req.txt  steam.sh  test
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Web/: login.php  logout.php  register.php  server.php
apache/: Dockerfile  demo.apache.conf
game_passwords/: css.pwd  tf2.pwd
python/: generate_server_password.py  set_server_password.py
sql_dump/: beacon.sql
src/: auth.rs  format.rs  main.rs
steam_docker/: Dockerfile
steam_stuff/: csgo_install.txt  entry.sh  run.sh
steam_stuff/.steam/: registry.vdf
