[package]
name = "beacon_backend"
version = "0.1.0"
authors = ["William Batista <bootlegbilly@protonmail.ch>"]
edition = "2018"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reinda = "0.2"
regex = "1"
once_cell = "1"
lazy_static = "1"
rust-embed= {version = "5", features = ["compression"]}
