[package]
name = "beacon_backend"
version = "0.1.0"
authors = ["William Batista <bootlegbilly@protonmail.ch>"]
edition = "2018"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reinda = "0.2"
warp = "0.3"
serde = { version = "1", features = ["derive"] }
rust-argon2 = "0.8"
rand = "0.8"
